Fixed overflow scroll for testimonials

--- a/styles/02. Index/02. Testimonials/Testimonials.module.scss
+++ b/styles/02. Index/02. Testimonials/Testimonials.module.scss
@@ -15,8 +15,9 @@ $macbook: 1400px;
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
-  height: 220px;
-  overflow-y: scroll;
+  height: 230px;
+  overflow-y: hidden;
+  overflow-x: scroll;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none;
 }
@@ -29,8 +30,9 @@ $macbook: 1400px;
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
-  height: 220px;
-  overflow-y: scroll;
+  height: 230px;
+  overflow-y: hidden;
+  overflow-x: scroll;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none;
 }
